objects/ChargentBase__Aggregation__c.object
<CustomObject>
    <description>This object stores aggregation data used for the Chargent Aggregation Framework. This framework is used by various Chargent features, including the Automated Collections Dashboard and the Gateway Usage component.</description>
    <fields>
        <fullName>ChargentBase__AC_Process_Amount_Total__c</fullName>
        <description>The total amount of cash related to this AC Process.</description>
        <inlineHelpText>The total amount of cash related to this AC Process.</inlineHelpText>
        <label>AC Process Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Amount__c</fullName>
        <description>The total amount of cash collected by this AC Process.</description>
        <inlineHelpText>The total amount of cash collected by this AC Process.</inlineHelpText>
        <label>AC Process Collected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Avg_Month__c</fullName>
        <description>Monthly average collected by this AC Process</description>
        <formula>IF(ChargentBase__AC_Process_Months_Enabled__c &gt; 0,  ChargentBase__AC_Process_Amount__c /  ChargentBase__AC_Process_Months_Enabled__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly average collected by this AC Process</inlineHelpText>
        <label>AC Process Avg / Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Collection__c</fullName>
        <description>The % of successful collections by this AC Process</description>
        <formula>( IF(ChargentBase__AC_Process_Finished_Successful__c + ChargentBase__AC_Process_Finished_Unsuccessful__c &gt; 0, ( ChargentBase__AC_Process_Finished_Successful__c / ( ChargentBase__AC_Process_Finished_Successful__c + ChargentBase__AC_Process_Finished_Unsuccessful__c ) ), 0)
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of successful collections by this AC Process</inlineHelpText>
        <label>AC Process Collection %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is active when the AC Process Config related is enabled</description>
        <inlineHelpText>This checkbox is active when the AC Process Config related is enabled</inlineHelpText>
        <label>AC Process Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Finished_Successful__c</fullName>
        <description>Times that this AC Process was triggered and successfully collected a payment.</description>
        <inlineHelpText>Times that this AC Process was triggered and successfully collected a payment.</inlineHelpText>
        <label># AC Process Finished Successful</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Finished_Unsuccessful__c</fullName>
        <description>Times that this AC has finished without receiving the payment</description>
        <inlineHelpText>Times that this AC has finished without receiving the payment</inlineHelpText>
        <label># AC Process Finished Unsuccessful</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Months_Enabled__c</fullName>
        <description>The number of months this AC process is being enabled.</description>
        <inlineHelpText>The number of months this AC process is being enabled.</inlineHelpText>
        <label>AC Process Months Enabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Name__c</fullName>
        <description>The Automated Collection Process name associated with this aggregation</description>
        <inlineHelpText>The Automated Collection Process name associated with this aggregation</inlineHelpText>
        <label>AC Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Times_Triggered__c</fullName>
        <description>The total number of times this AC Process has been triggered.</description>
        <inlineHelpText>The total number of times this AC Process has been triggered.</inlineHelpText>
        <label>AC Process Times Triggered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Process_Total_Stages_Executed__c</fullName>
        <description>The total number of times a stage has been executed within this AC Process.</description>
        <inlineHelpText>The total number of times a stage has been executed within this AC Process.</inlineHelpText>
        <label>AC Process Total Stages Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Stage_Actions__c</fullName>
        <description>The Actions configured for this AC Stage</description>
        <inlineHelpText>The Actions configured for this AC Stage</inlineHelpText>
        <label>AC Stage Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Stage_Collected_Amount__c</fullName>
        <description>The total amount of cash collected by this AC Stage.</description>
        <inlineHelpText>The total amount of cash collected by this AC Stage.</inlineHelpText>
        <label>AC Stage Collected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Stage_Number__c</fullName>
        <description>The Stage number of the associated AC process</description>
        <formula>VALUE( ChargentBase__AC_Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Stage number of the associated AC process</inlineHelpText>
        <label>AC Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Stage_Success_Rate__c</fullName>
        <description>This indicator is calculated dividing the &quot;AC Stage Times Collected&quot; by the &quot;AC Stage Times Triggered&quot;</description>
        <formula>IF(ChargentBase__AC_Stage_Times_Triggered__c &gt; 0, ChargentBase__AC_Stage_Times_Collected__c / ChargentBase__AC_Stage_Times_Triggered__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This indicator is calculated dividing the &quot;AC Stage Times Collected&quot; by the &quot;AC Stage Times Triggered&quot;</inlineHelpText>
        <label>AC Stage Success Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Stage_Times_Collected__c</fullName>
        <description>The number of times this ac stage successfully collected the payment.</description>
        <inlineHelpText>The number of times this ac stage successfully collected the payment.</inlineHelpText>
        <label>AC Stage Times Collected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Stage_Times_Triggered__c</fullName>
        <description>Times this Stage was triggered</description>
        <inlineHelpText>Times this Stage was triggered</inlineHelpText>
        <label>AC Stage Times Triggered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__AC_Stage__c</fullName>
        <description>The Stage number of the associated AC process</description>
        <inlineHelpText>The Stage number of the associated AC process</inlineHelpText>
        <label>AC Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Date__c</fullName>
        <description>Date for the aggregation record.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Day_In_Week__c</fullName>
        <description>Name of the week day.</description>
        <label>Day in week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Event_Count__c</fullName>
        <label>Event count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__GU_Transaction_Count__c</fullName>
        <description>Count of transactions done to the gateways through Chargent packages.</description>
        <label>Gateway Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Key__c</fullName>
        <description>Contains the unique key for the aggregation record that will be calculated directly from the package.</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ChargentBase__Month_Year__c</fullName>
        <description>Month-Year help formula field</description>
        <formula>TEXT( ChargentBase__Month__c )  &amp; &quot;-&quot; &amp; ChargentBase__Year__c</formula>
        <inlineHelpText>Month-Year help formula field</inlineHelpText>
        <label>Month-Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Month__c</fullName>
        <description>Month of the aggregation record</description>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Time_Aggregation_Type__c</fullName>
        <description>Indicates the type of time aggregation/period selected for the aggregation implementation.</description>
        <label>Time Aggregation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DAILY</fullName>
                </value>
                <value>
                    <fullName>WEEKLY</fullName>
                </value>
                <value>
                    <fullName>MONTHLY</fullName>
                </value>
                <value>
                    <fullName>ANNUAL</fullName>
                </value>
                <value>
                    <fullName>ALL_TIME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentBase__Week_In_year__c</fullName>
        <description>Number of the week in the year for the aggregation record.</description>
        <label>Week in year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentBase__Year__c</fullName>
        <description>Year of the aggregation record</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Chargent Aggregation</label>
    <nameField>
        <label>Aggregation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chargent Aggregations</pluralLabel>
    <recordTypes>
        <fullName>ChargentBase__Automated_Collections</fullName>
        <active>true</active>
        <description>Metrics for Automated Collections</description>
        <label>Automated Collections</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChargentBase__Gateway_Usage</fullName>
        <active>true</active>
        <description>Metrics aggregated from gateway usage</description>
        <label>Gateway Usage</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>